# lms

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  ping.sh  pyproject.toml
.github/workflows/: check.yml  ping.yml  release.yml
docker/backend/: backend.dockerfile  pre-start.sh  start.sh  worker.dockerfile
docker/cron/: cron.dockerfile  regular_tasks
docker/lms/: lms.dockerfile
docker/worker/: worker.dockerfile
lms/: __init__.py  __main__.py  arguments.py  config.py  deps.py  dto.py  enums.py  main.py  pre_start.py  setup_app.py  utils.py
lms/adapters/autopilot/: client.py  config.py
lms/adapters/db/: __main__.py  base.py  config.py  mixins.py  models.py  uow.py  utils.py
lms/adapters/db/migrations/: env.py
lms/adapters/db/repositories/: base.py  (+15 more)
lms/adapters/google/: config.py
lms/adapters/soho/: config.py  soho.py
lms/adapters/telegram/: config.py  telegram.py
lms/admin/: auth_provider.py  setup_admin.py  utils.py
lms/admin/templates/: distribution.html  home.html  index.html  teacher_product_dashboard.html
lms/api/: auth.py  deps.py  router.py  service.py  services.py
lms/api/v1/: handler.py  monitoring.py  router.py  schemas.py
lms/application/: config.py  http.py  logging.py  security.py
lms/cli/: add_user.py  change_password.py  run_distribution.py  run_notifications.py
lms/clients/: autopilot.py  soho.py  telegram.py
lms/clients/base/: client.py  handlers.py  root_handler.py
lms/clients/soho/: client.py  schemas.py
lms/controllers/homework_distribution/: distribution.py  dto.py
lms/controllers/homework_notification/: base.py  regular.py  subscription.py
lms/cron/: __main__.py  args.py  deps.py  regular_notify.py  service.py  subscription_notify.py
lms/cron/homework_notification/: additional.py  base.py  builder.py  dto.py  regular.py  subscription.py
lms/db/: __main__.py  base.py  mixins.py  models.py  uow.py  utils.py
lms/db/migrations/: env.py
lms/db/repositories/: base.py  distribution.py  file.py  flow.py  offer.py  product.py  reviewer.py  setting.py  soho.py  student.py  student_product.py  subject.py  teacher.py  teacher_assignment.py  teacher_product.py  user.py
lms/domains/: args.py
lms/exceptions/: __init__.py  base.py  distribution.py  product.py  soho.py  student.py  subject.py  teacher.py  user.py
lms/generals/: enums.py
lms/generals/models/: distribution.py  flow.py  offer.py  pagination.py  parsed_file.py  product.py  reviewer.py  setting.py  soho.py  student.py  student_product.py  subject.py  teacher.py  teacher_dashboard.py  teacher_product.py  user.py  verified_work_file.py
lms/logic/: change_vk_id.py  distribute_homeworks.py  enroll_student.py  expulse_student.py  grade_teacher.py
lms/presentation/cli/: add_user.py  change_password.py
lms/presentation/cron/: __main__.py  config.py  deps.py  service.py
lms/presentation/rest/: __main__.py  config.py  deps.py  service.py
lms/rest/: __main__.py  args.py  deps.py  service.py
lms/rest/api/: auth.py  router.py
lms/services/: change_teacher_product.py  change_vk_id.py  enroll_student.py  expulse_student.py
lms/tasks/: base.py  config.py  distribution_task.py
lms/utils/: add_user.py  args.py  http.py  settings.py
lms/utils/distribution/: models.py  utils.py
src/: config.py  dto.py  enums.py  main.py  pre_start.py  setup_app.py
src/api/: deps.py  router.py  services.py
src/api/v1/: handler.py  monitoring.py  router.py  schemas.py
src/clients/: autopilot.py
src/clients/soho/: client.py
src/controllers/homework_distribution/: distribution.py
src/controllers/homework_notification/: base.py  dto.py  regular.py  subscription.py  utils.py
src/cron/: notify.py  regular_notify.py  subscription_notify.py
src/db/: dto.py  factory.py  mixins.py  models.py  provider.py  uow.py
src/db/migrations/: env.py
src/db/repositories/: base.py  flow.py  offer.py  product.py  soho.py  student.py  student_product.py  subject.py  teacher.py  teacher_assignment.py  teacher_product.py
src/exceptions/: __init__.py  base.py  product.py  soho.py  student.py  subject.py  teacher.py
src/services/: autopilot.py  change_vk_id.py  enroll_student.py  expulse_student.py  grade_teacher.py
src/tasks/: base.py  celery_app.py  config.py  distribution_task.py
tests/: conftest.py  factories.py  utils.py
tests/api/product/: test_read_by_id.py  test_read_list.py
tests/api/student/: test_change_teacher.py  test_change_vk_id.py  test_expulse_student.py  test_grade_teacher.py  test_read_student.py
tests/api/subject/: test_read_by_id.py  test_read_list.py
tests/database/: test_migrations_up_to_date.py
tests/enroller/: test_change_teacher.py
tests/factories/: base.py  models.py
tests/plugins/: arguments.py  autopilot.py  database.py  distributor.py  factories.py  rest.py  soho.py  telegram.py
tests/plugins/factories/: factories.py  flow.py  offer.py  product.py  reviewer.py  soho.py  student.py  subject.py  teacher.py  teacher_assignment.py
tests/plugins/instances/: arguments.py  autopilot.py  database.py  distributor.py  rest.py  soho.py  telegram.py
tests/reviewers/: test_repository.py
tests/test_api/: conftest.py  test_ping.py
tests/test_api/test_product/: test_read_by_id.py  test_read_list.py
tests/test_api/test_student/: test_change_teacher.py  test_change_vk_id.py  test_enroll_student.py  test_expulse_student.py  test_grade_teacher.py  test_read_student.py
tests/test_api/test_subject/: test_read_by_id.py  test_read_list.py
tests/test_database/: test_migrations_up_to_date.py  test_stairway.py
tests/test_rest/: test_ping.py
tests/test_rest/test_student/: test_change_teacher.py  test_change_vk_id.py  test_expulse_student.py  test_grade_teacher.py  test_read_student.py
tests/test_unit/: test_ping.py
tests/test_unit/test_student/: test_change_vk_id.py  test_create_subject.py  test_grade_teacher.py  test_read_student.py
tests/utils/: database.py
tests/utils/srvmocker/: __init__.py  handlers.py  models.py  responses.py  service.py
(+107 files in other folders)
