[tool.poetry]
name = "lms"
version = "0.1.0"
description = "New LMS for Insperia School with Soho.LMS"
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "new_lms"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
SQLAlchemy = "^2.0.22"
sqlalchemy-utils = "^0.41.1"
httpx = "^0.24.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
celery = {extras = ["msgpack"], version = "^5.3.4"}
orjson = "^3.9.9"
greenlet = "^3.0.0"

[tool.poetry.group.backend.dependencies]
fastapi = "^0.101.1"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
python-jose = "^3.3.0"
gunicorn = "^21.2.0"

[tool.poetry.group.worker.dependencies]
psycopg2-binary = "^2.9.9"
google-api-service-helper = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mypy = "^1.6.0"
types-python-jose = "^3.3.4.8"
pytest = "^7.4.2"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"
pytest-deadfixtures = "^2.2.1"
polyfactory = "^2.9.0"
pytest-cov = "^4.1.0"
black = "^23.9.1"
bandit = "^1.7.5"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
known_local_folder = ["lms", "tests"]
py_version = "311"
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_api_service_helper.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"